--- a/docs/src/_layouts/main.pug
+++ b/docs/src/_layouts/main.pug
@@ -23,7 +23,7 @@ html(lang='en')
     link(type="text/css", rel="stylesheet", href="./style.css")
     link(type="text/css", rel="stylesheet", href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css")
     link(type="text/css", rel="stylesheet", href="https://unpkg.com/@glidejs/glide@3.2.3/dist/css/glide.core.min.css")
-    body.hind.text-telluric
+    body.hind.text-telluric.debug.bg-white
       include ../_includes/tag-manager-noscript.pug
       include ../_includes/header.pug
       .block.mt-3
