assets resize + optimize + format

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -25,51 +25,51 @@ block content
             .glide__slide
               img(src="assets/logos/babel.png", alt="DocSearch + Babel", width=60)
             .glide__slide
-              img(src="assets/logos/bootstrap.png", alt="DocSearch + Bootstrap", width=60)
+              img(src="assets/logos/bootstrap.jpg", alt="DocSearch + Bootstrap", width=60)
             .glide__slide
               img(src="assets/logos/circleio.jpg", alt="DocSearch + Circle.io", width=60)
             .glide__slide
-              img(src="assets/logos/cordova.png", alt="DocSearch + Cordova", width=60)
+              img(src="assets/logos/cordova.jpg", alt="DocSearch + Cordova", width=60)
             .glide__slide
-              img(src="assets/logos/electron.png", alt="DocSearch + Electron", width=60)
+              img(src="assets/logos/electron.jpg", alt="DocSearch + Electron", width=60)
             .glide__slide
-              img(src="assets/logos/ember.png", alt="DocSearch + Ember", width=60)
+              img(src="assets/logos/ember.jpg", alt="DocSearch + Ember", width=60)
             .glide__slide
               img(src="assets/logos/eslint.jpg", alt="DocSearch + EsLint", width=60)
             .glide__slide
-              img(src="assets/logos/gitlab.png", alt="DocSearch + Gitlab", width=60)
+              img(src="assets/logos/gitlab.jpg", alt="DocSearch + Gitlab", width=60)
             .glide__slide
-              img(src="assets/logos/go.png", alt="DocSearch + Go", width=60)
+              img(src="assets/logos/go.jpg", alt="DocSearch + Go", width=60)
             .glide__slide
-              img(src="assets/logos/grafana.png", alt="DocSearch + Grafana", width=60)
+              img(src="assets/logos/grafana.jpg", alt="DocSearch + Grafana", width=60)
             .glide__slide
-              img(src="assets/logos/graphql.png", alt="DocSearch + GraphQL", width=60)
+              img(src="assets/logos/graphql.jpg", alt="DocSearch + GraphQL", width=60)
             .glide__slide
               img(src="assets/logos/jekyll.jpg", alt="DocSearch + Jekyll", width=60)
             .glide__slide
-              img(src="assets/logos/netlify.png", alt="DocSearch + Netlify", width=60)
+              img(src="assets/logos/netlify.jpg", alt="DocSearch + Netlify", width=60)
             .glide__slide
               img(src="assets/logos/paypal.jpg", alt="DocSearch + Paypal", width=60)
             .glide__slide
-              img(src="assets/logos/postman.png", alt="DocSearch + Postman", width=60)
+              img(src="assets/logos/postman.jpg", alt="DocSearch + Postman", width=60)
             .glide__slide
-              img(src="assets/logos/react.png", alt="DocSearch + React", width=60)
+              img(src="assets/logos/react.jpg", alt="DocSearch + React", width=60)
             .glide__slide
-              img(src="assets/logos/scala.png", alt="DocSearch + Scala", width=60)
+              img(src="assets/logos/scala.jpg", alt="DocSearch + Scala", width=60)
             .glide__slide
-              img(src="assets/logos/serverless.png", alt="DocSearch + Serverless", width=60)
+              img(src="assets/logos/serverless.jpg", alt="DocSearch + Serverless", width=60)
             .glide__slide
-              img(src="assets/logos/socketio.png", alt="DocSearch + Socket.io" , width=60)
+              img(src="assets/logos/socketio.jpg", alt="DocSearch + Socket.io" , width=60)
             .glide__slide
-              img(src="assets/logos/stripe.png", alt="DocSearch + Stripe", width=60)
+              img(src="assets/logos/stripe.jpg", alt="DocSearch + Stripe", width=60)
             .glide__slide
-              img(src="assets/logos/symfony.png", alt="DocSearch + Symfony", width=60)
+              img(src="assets/logos/symfony.jpg", alt="DocSearch + Symfony", width=60)
             .glide__slide
-              img(src="assets/logos/trello.png", alt="DocSearch + Trello", width=60)
+              img(src="assets/logos/trello.jpg", alt="DocSearch + Trello", width=60)
             .glide__slide
-              img(src="assets/logos/vue.png", alt="DocSearch + Vue", width=60)
+              img(src="assets/logos/vue.jpg", alt="DocSearch + Vue", width=60)
             .glide__slide
-              img(src="assets/logos/webpack.png", alt="DocSearch + Webpack", width=60)
+              img(src="assets/logos/webpack.jpg", alt="DocSearch + Webpack", width=60)
             .glide__slide
               img(src="assets/logos/yarn.jpg", alt="DocSearch + Yarn", width=60)
                     
