--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -14,7 +14,7 @@ block content
     .max-w-md.m-auto.text-center.px-2
       img.mt-3.mb-1(src="assets/docsearch-logo.svg", alt="DocSearch logo" width=480)
       .text-2.text-nova.mb-3 The best search experience for docs, integrates in minutes, for free
-      .text-5.text-telluric.mb-3 Providing search for 900+ docs, and counting
+      .text-5.text-telluric.mb-3 Providing search for 900+ docs, and counting.
       a.c-button.c-button-primary(href="#join-docsearch-program") Join the Program
   
   .bg-moon.px-2
@@ -23,7 +23,7 @@ block content
         .glide__track(data-glide-el="track")
           .glide__slides
             .glide__slide
-              img(src="assets/logos/babel.png", alt="DocSearch + Babel", width=60)
+              img(src="assets/logos/babel.jpg", alt="DocSearch + Babel", width=60)
             .glide__slide
               img(src="assets/logos/bootstrap.jpg", alt="DocSearch + Bootstrap", width=60)
             .glide__slide
