--- a/docs/src/_layouts/two-columns.pug
+++ b/docs/src/_layouts/two-columns.pug
@@ -16,11 +16,11 @@ block nav
         path(d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z")
             
 block content
-  .bgtb-moon-white-pure.px-2
+  .bgtb-moon-white-pure
     .md_flex.max-w-lg.m-auto
-      .navigation-sidebar.hidden.absolute.z-90.-m-2.md_m-0.w-100.md_static.bg-white.md_bg-transparent.md_w-25.md_block.md_border-0.text-center.md_text-left
+      .navigation-sidebar.hidden.absolute.z-90.md_static.bg-white.md_bg-transparent.w-100.md_w-25.md_block.md_border-0.text-center.md_text-left.md_pl-2
         // Adding subsections from markdown
-        .sticky.pin-t.h-100vh.overflow-y-auto.pt-4.md_pt-3.lg_pt-4
+        .sticky.pin-t.h-100vh.overflow-y-auto.pt-4.md_pt-3.lg_pt-4.w-full
           each category in sidebar
             .category.text-nebula.poppins.uppercase.mb-1.text-2.md_text-1=category.title
             ul.list-reset.pb-1.text-1.mb-1.md_ml-0x
@@ -36,12 +36,12 @@ block content
                         li
                           a.block.py-0x.text-telluric(href=`${page.url}#${heading.anchor}`)=heading.title
 
-      .documentation-content.text-1.pt-2.md_pt-3.lg_pt-4.max-w-md.pb-4.md_pl-2
+      .documentation-content.text-1.pt-2.md_pt-3.lg_pt-4.pb-4.px-2.w_100.md_w-75
         .block.md_hidden.mb-1
           a(href=site.url) DocSearch
           span &nbsp;>&nbsp;
           a(href=`${site.url}/what-is-docsearch.html`) Documentation
-        .text-5.lg_text-6.uppercase.tracking-poppins.text-solstice.bold.mb-2=current.title
+        .text-5.lg_text-7.uppercase.tracking-poppins.text-solstice.bold.mb-2=current.title
         !=current.content
         // Include the apply form
         if current.includeForm
