--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -128,33 +128,33 @@ block content
           a.c-card.custom-demo.fla.flex.flcnw.p-05(href='http://getbootstrap.com/docs/4.1/getting-started/introduction/')
             .fln.flc.relative.text-0.max-w-5.m-auto
               img(src='assets/demos/example-bootstrap.gif', alt='Bootstrap')
-            .fln.pt-1.flex.flrnw.flc.pl-1
+            .fln.pt-1.flex.flrnw.flc
               .fln.text-0
-                img.h-2(src='assets/logos/bootstrap.png', alt='Bootstrap')
+                img.h-2(src='assets/logos/bootstrap.jpg', alt='Bootstrap')
               .fla.pl-1.text-solstice.uppercase.bold Bootstrap
         .fln.w-100.sm_w-50.md_w-25.p-1.flex.flrnw
           a.c-card.custom-demo.fla.flex.flcnw.p-05(href='https://vuejs.org/v2/guide/')
             .fln.flc.relative.text-0.max-w-5.m-auto
               img(src='assets/demos/example-vuejs.gif', alt='Vue')
-            .fln.pt-1.flex.flrnw.flc.pl-1
+            .fln.pt-1.flex.flrnw.flc
               .fln.text-0
-                img.h-2(src='assets/logos/vue.png', alt='Vue')
+                img.h-2(src='assets/logos/vue.jpg', alt='Vue')
               .fla.pl-1.text-solstice.uppercase.bold Vue
         .fln.w-100.sm_w-50.md_w-25.p-1.flex.flrnw
           a.c-card.custom-demo.fla.flex.flcnw.p-05(href='https://reactjs.org/docs/getting-started.html')
             .fln.flc.relative.text-0.max-w-5.m-auto
               img(src='assets/demos/example-react.gif', alt='React')
-            .fln.pt-1.flex.flrnw.flc.pl-1
+            .fln.pt-1.flex.flrnw.flc
               .fln.text-0
-                img.h-2(src='assets/logos/react.png', alt='React')
+                img.h-2(src='assets/logos/react.jpg', alt='React')
               .fla.pl-1.text-solstice.uppercase.bold React
         .fln.w-100.sm_w-50.md_w-25.p-1.flex.flrnw
           a.c-card.custom-demo.fla.flex.flcnw.p-05(href='https://stripe.com/docs')
             .fln.flc.relative.text-0.max-w-5.m-auto
               img(src='assets/demos/example-stripe.gif', alt='Stripe')
-            .fln.pt-1.flex.flrnw.flc.pl-1
+            .fln.pt-1.flex.flrnw.flc
               .fln.text-0
-                img.h-2(src='assets/logos/stripe.png', alt='Stripe')
+                img.h-2(src='assets/logos/stripe.jpg', alt='Stripe')
               .fla.pl-1.text-solstice.uppercase.bold Stripe
 
   .bg-footer(id="join-docsearch-program").px-2
@@ -167,7 +167,7 @@ block content
         include ../_includes/apply-form.pug
 
     .text-center.mt-2
-      .text-2.mb-3.leading-2
+      .text-1.mb-3.leading-2
         span.block.mb-1.sm_inline.whitespace-no-wrap DocSearch 2015-2018
         span.block.hidden.sm_inline.mx-1 •
         span.block.sm_inline.whitespace-no-wrap Designed and built by
