ref tooltips + fixes

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -18,60 +18,85 @@ block content
       a.c-button.c-button-primary(href="#join-docsearch-program") Join the Program
   
   .bg-moon.px-2
-    .max-w-xl.m-auto.text-center.my-3
+    .max-w-xl.m-auto.text-center.mt-3.mb-2
       .glide
         .glide__track(data-glide-el="track")
           .glide__slides
             .glide__slide
               img(src="assets/logos/babel.jpg", alt="DocSearch + Babel", width=60)
+              .glide__caption Babel
             .glide__slide
               img(src="assets/logos/bootstrap.jpg", alt="DocSearch + Bootstrap", width=60)
+              .glide__caption Bootstrap
             .glide__slide
               img(src="assets/logos/circleio.jpg", alt="DocSearch + Circle.io", width=60)
+              .glide__caption Circle.io
             .glide__slide
               img(src="assets/logos/cordova.jpg", alt="DocSearch + Cordova", width=60)
+              .glide__caption Cordova
             .glide__slide
               img(src="assets/logos/electron.jpg", alt="DocSearch + Electron", width=60)
+              .glide__caption Electron
             .glide__slide
               img(src="assets/logos/ember.jpg", alt="DocSearch + Ember", width=60)
+              .glide__caption Ember
             .glide__slide
               img(src="assets/logos/eslint.jpg", alt="DocSearch + EsLint", width=60)
+              .glide__caption EsLint
             .glide__slide
               img(src="assets/logos/gitlab.jpg", alt="DocSearch + Gitlab", width=60)
+              .glide__caption Gitlab
             .glide__slide
               img(src="assets/logos/go.jpg", alt="DocSearch + Go", width=60)
+              .glide__caption Go
             .glide__slide
               img(src="assets/logos/grafana.jpg", alt="DocSearch + Grafana", width=60)
+              .glide__caption Grafana
             .glide__slide
               img(src="assets/logos/graphql.jpg", alt="DocSearch + GraphQL", width=60)
+              .glide__caption GraphQL
             .glide__slide
               img(src="assets/logos/jekyll.jpg", alt="DocSearch + Jekyll", width=60)
+              .glide__caption Jekyll
             .glide__slide
               img(src="assets/logos/netlify.jpg", alt="DocSearch + Netlify", width=60)
+              .glide__caption Netlify
             .glide__slide
               img(src="assets/logos/paypal.jpg", alt="DocSearch + Paypal", width=60)
+              .glide__caption Paypal
             .glide__slide
               img(src="assets/logos/postman.jpg", alt="DocSearch + Postman", width=60)
+              .glide__caption Postman
             .glide__slide
               img(src="assets/logos/react.jpg", alt="DocSearch + React", width=60)
+              .glide__caption React
             .glide__slide
               img(src="assets/logos/scala.jpg", alt="DocSearch + Scala", width=60)
+              .glide__caption Scala
             .glide__slide
               img(src="assets/logos/serverless.jpg", alt="DocSearch + Serverless", width=60)
+              .glide__caption Serverless
             .glide__slide
               img(src="assets/logos/socketio.jpg", alt="DocSearch + Socket.io" , width=60)
+              .glide__caption Socket.io
             .glide__slide
               img(src="assets/logos/stripe.jpg", alt="DocSearch + Stripe", width=60)
+              .glide__caption Stripe
             .glide__slide
               img(src="assets/logos/symfony.jpg", alt="DocSearch + Symfony", width=60)
+              .glide__caption Symfony
             .glide__slide
               img(src="assets/logos/trello.jpg", alt="DocSearch + Trello", width=60)
+              .glide__caption Trello
             .glide__slide
               img(src="assets/logos/vue.jpg", alt="DocSearch + Vue", width=60)
+              .glide__caption Vue
             .glide__slide
               img(src="assets/logos/webpack.jpg", alt="DocSearch + Webpack", width=60)
+              .glide__caption Webpack
             .glide__slide
               img(src="assets/logos/yarn.jpg", alt="DocSearch + Yarn", width=60)
+              .glide__caption Yarn
                     
     .max-w-md.m-auto.text-center
       h2.text-solstice.text-5.normal.pb-2 State-of-the-art search for technical documentation
@@ -189,15 +214,15 @@ block content
       
       //include ../_includes/newsletter.pug
 
-  .hidden
+  .hidde
     .my-popper
       .popper__arrow(x-arrow='right')
       img(src='https://docsearch-shared.netlify.com/docsearch-logo.png', alt='DocSearch', width=200)
       p
         | Try to search for expressions like 
-        a.ds-sample-query(data-sample='ajax', href='#') ajax
+        a.ds-sample-query(data-sample='grid', href='#') grid
         | , 
-        a.ds-sample-query(data-sample='live', href='#') live
+        a.ds-sample-query(data-sample='flex', href='#') flex
         |  or 
-        a.ds-sample-query(data-sample='html', href='#') html
+        a.ds-sample-query(data-sample='form group', href='#') form group
         | .
