--- a/docs/src/_includes/header.pug
+++ b/docs/src/_includes/header.pug
@@ -49,7 +49,7 @@
     //- Project link
     .flex.fln.flrnw.flc.pl-1.sm_pl-0
       a.cursor-pointer.uppercase.tracking-poppins.poppins.text-solstice.hover_text-nebula.hover_no-underline(href=site.url)
-        span.hidden.sm_block.ml-0x=site.title
+        span.hidden.sm_block.ml-0x=site.project
         img.align-text-bottom.h-100.sm_hidden.ml-1(src="assets/docsearch-mark.svg" width=40 alt="DocSearch logo")
 
     //- DocSearch
