--- a/docs/src/_styles/components.css
+++ b/docs/src/_styles/components.css
@@ -79,15 +79,59 @@
 /* Logo slider (gslide) */
 .glide__slide {
   text-align: center;
+  cursor: pointer;
+  margin: 3px 0;
+  position: relative;
+  min-height: 80px;
+  display: block;
 
+  .glide__caption {
+    display: inline-block;
+    position: relative;
+    background-color: #4F61EE;
+    color: white;
+    margin: 8px auto 0 ;
+    padding: 3px 6px 1px;
+    border-radius: 4px;
+    top: -2px;
+    font-size: 13px;
+    width: auto;
+    opacity: 0;
+    transition: opacity .5s ease;
+
+    &:before {
+      content:"";
+      position: absolute;
+      border-color: #4F61EE;
+      border-width: 0 6px 6px 6px;
+      border-left-color: transparent;
+      border-right-color: transparent;
+      border-top-color: transparent;
+      top: -4px;
+      left: calc(50% - 6px);
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+  }
+  &:hover .glide__caption {
+    opacity: 1;
+  }
   img {
     border-radius: 6px;
     overflow: hidden;
     display: inline-block;
     max-width: 50px;
-    vertical-align: text-bottom;
+    vertical-align: middle;
+    position: relative;
+    &:hover {
+      top: -1px;
+      box-shadow: 0 2px 4px 0 rgba(93,100,148,0.20), 0 5px 15px 0 rgba(37,44,97,0.15);
+    }
   }
 }
+
+
 
 /* Live Demo */
 .docsearch-live-demo-input-wrapper {
