--- a/docs/src/_styles/docs.css
+++ b/docs/src/_styles/docs.css
@@ -30,6 +30,27 @@
       @apply .inline-block;
     }
   }
+  h3 {
+    @apply .text-nebula .text-3 .normal;
+    @apply .mb-1 .mt-2;
+    /* Trick to have heading scroll into view and not being hidden by header */
+    &:before {
+      content: "";
+      @apply hidden .h-3;
+    }
+    &:target:before {
+      @apply block;
+    }
+    .anchor {
+      @apply .hidden;
+      &:after {
+        content: "#";
+      }
+    }
+    &:hover .anchor {
+      @apply .inline-block;
+    }
+  }
 }
 
 .navigation-sidebar{
